[package]
name = "metis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
log = "0.4.20"
vhost = "0.9.0"
vhost-user-backend = "0.11.0"
virtio-bindings = "0.2.0"
vm-memory = { version = "0.13.1", features = ["backend-bitmap"] }
vmm-sys-util = "0.11.1"
